[Fix #55044284] Fix width of pre/appended inputs on mobile

--- a/app/assets/stylesheets/responsive/responsive-767.less
+++ b/app/assets/stylesheets/responsive/responsive-767.less
@@ -6,3 +6,9 @@
     margin-top: 10px;
   }
 }
+
+.input-append, .input-prepend {
+  input {
+    width: 206px;
+  }
+}
